tolto i model da prenotazione e ordinazione